# meshview

./: .gitignore  README.md  meshview.cabal  seq.dia  stack.yaml
app/: Main.hs
sample/: tu134.stl
src/: Meshview.hs
src/Meshview/: Camera.hs  CameraActor.hs  Color.hs  Display.hs  FragmentShader.hs  GUI.hs  GUIActor.hs  LoadShaders.hs  MeshOBJ.hs  MeshSTL.hs  Message.hs  Render.hs  RenderMonad.hs  Renderer.hs  RendererActor.hs  Scene.hs  SceneActor.hs  Simulate.hs  Timer.hs  TimerActor.hs  Types.hs  VertexShader.hs
