name:                meshview
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/meshview#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/meshview#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Meshview
                     , Meshview.Types
                     , Meshview.Message
                     , Meshview.Color
                     , Meshview.Render
                     , Meshview.RenderMonad
                     , Meshview.LoadShaders
                     , Meshview.FragmentShader
                     , Meshview.VertexShader
                     , Meshview.GUIActor
                     , Meshview.RendererActor
                     , Meshview.SceneActor
                     , Meshview.CameraActor
                     , Meshview.TimerActor
--                     , Meshview.Display
                     , Meshview.Simulate
  build-depends:       base >= 4.7 && < 5
                     , random
                     , mtl
                     , containers
                     , bytestring
                     , lens
                     , linear
                     , raw-strings-qq
                     , GLFW-b
                     , OpenGL
                     , OpenGLRaw
                     , nano-erl
                     , nano-erl-broadcast
  default-language:    Haskell2010

executable meshview-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  -- XXX Test this on OpenBSD:
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , meshview
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/meshview
